# cyber_hunter

./: .gitignore  README.md  pyproject.toml  requirements.txt  scrapinghub.yml  scrapy.cfg
cyber_hunter/: __init__.py  items.py  middlewares.py  pipelines.py  settings.py
cyber_hunter/spiders/: job_spider.py
output/: .gitkeep
